--- a/imagegallery.html
+++ b/imagegallery.html
@@ -7,11 +7,11 @@
   <link href="myStyleSheet.css" rel="stylesheet">
   <nav>
     <ul>
-      <li class="navbar"><a href="FinalProjectHome.html" target="_blank" class="home"> Home </a></li>
+      <li class="navbar"><a href="index.html" target="_blank" class="home"> Home </a></li>
       <li class="navbar"><a href="whyadopt.html" target="_blank" class="whyadopt"> Why Adopt? </a></li>
       <li  class="navbar"><a href="imagegallery.html">Gallery</a></li>
       <li class="navbar"><a href="AboutMefinal.html" target="_blank" class="aboutme"> About </a></li>
-      <li class="navbar"><a href="index.html" target="_blank">Contact </a></li>
+      <li class="navbar"><a href="contact.html" target="_blank">Contact </a></li>
     </ul>
   </nav>
 </head>
@@ -35,8 +35,8 @@
 <footer class="footerbar">
   <ul>
     <li class="navbar"><a>Phensem Adoption Center </a></li>
-    <li class="navbar"><a href="FinalProjectHome.html">Home</a></li>
-    <li class="navbar"><a href="AboutMefinal.html">About</a></li>
+    <li class="navbar"><a href="index.html" target="_blank">Home</a></li>
+    <li class="navbar"><a href="AboutMefinal.html" target="_blank">About</a></li>
     <li class="navbar"><a href="contact.html" target="_blank">Contact </a></li>
   </ul>
 </footer>
