--- a/whyadopt.html
+++ b/whyadopt.html
@@ -16,7 +16,7 @@
     <link href="myStyleSheet.css" rel="stylesheet">
   </head>
   <body>
-    <h2> Top reasons to adopt a pet: </h2>
+    <h2> Top reasons to adopt: </h2>
     <div>
     <h3 class="reasons"> 1. Because you will save a life. </h3>
     <h4 class="reasonpoints">The animals that are left on the streets are mistreated and abused on a daily basis. If you decide to adopt, you will be saving a life. </h4>
