--- a/whyadopt.html
+++ b/whyadopt.html
@@ -28,7 +28,7 @@
     <h4 class="reasonpoints">Animals not only provide unconditional love, but they have also been found to benefit their companions psychologically, emotionally, and physically. Caring for a pet can give you a sense of purpose and fulfillment, as well as help you feel less lonely. You can also feel good about helping an animal in need when you adopt!</h4>
   </div>
   <br>
-  <p>Here's a video if you want more resons: </p>
+  <p>Here's a video if you want more reasons: </p>
     <div class="dogvideo">
       <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/wWw0iQF5Za8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
